[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-redis"
authors = [
  { name="Firefox2100", email="wangyunze16@gmail.com" },
]
description = "A Prometheus client to use Redis as metrics storage."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "apscheduler>=3.11.0,<4.0.0",
    "redis>=5.0.0,<6.0.0",
]
dynamic = [
    "version"
]

[project.urls]
Homepage = "https://github.com/Firefox2100/prometheus-redis"
Issues = "https://github.com/Firefox2100/prometheus-redis/issues"

[tool.setuptools.dynamic]
version = {attr = "prometheus_redis.__version__"}
